<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name">PassportCamera</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_title">Confirm</string>

    <string name="card_content_description">Image of Media Piece</string>
    <string name="film_content_description">Still Capture from Film</string>
    <string name="book_content_description">Picture of Book Cover</string>
    <string name="rick_morty_content_description">Picture of Rick and Morty Character</string>
    <string name="add_card_content_description">Add a new card to the list</string>
    <string name="close_category_content_description">Remove this entire list</string>
    <string name="photo_display_content_description">Photo display of recently captured photo</string>
    <string name="close_card_content_description">Remove this card</string>
    <string name="fullscreen_content_description">View the photo in fullscreen</string>
    <string name="close_expanded_content_description">Close the expanded card view</string>

    <string name="add_photo_autofill_hint">Name of Card</string>

    <string name="choose_image">Choose Image</string>
    <string name="submit">Submit</string>


    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="origin">Origin:</string>

    <string name="runtime">Runtime:</string>
    <string name="rated">Rated:</string>
    <string name="plot">Plot</string>
    <string name="actors">Actors</string>

    <string name="pageCount">Page Count:</string>
    <string name="description">Description</string>
    <string name="authors">Authors</string>

    <string name="menu_camera">Camera</string>
    <string name="search_title">Search</string>


</resources>
