<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/cv_expanded_image"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_padding"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl__first_film_expanded_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_first_film_expanded"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/film_content_description" />

        <TextView
            android:id="@+id/tv_film_title_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_padding"
            android:textSize="@dimen/text_size_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_first_film_expanded" />

        <TextView
            android:id="@+id/tv_film_runtime_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/runtime"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_title_year" />

        <TextView
            android:id="@+id/tv_film_runtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginStart="@dimen/padding_2"
            app:layout_constraintStart_toEndOf="@id/tv_film_runtime_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_title_year" />

        <TextView
            android:id="@+id/tv_rated_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/rated"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/tv_film_runtime"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_title_year" />

        <TextView
            android:id="@+id/tv_film_rated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginStart="3dp"
            app:layout_constraintStart_toEndOf="@id/tv_rated_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_title_year" />


        <TextView
            android:id="@+id/tv_plot_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/plot"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_film_runtime" />


        <TextView
            android:id="@+id/tv_plot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginEnd="@dimen/home_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot_title" />

        <TextView
            android:id="@+id/tv_actors_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/actors"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_plot" />

        <TextView
            android:id="@+id/tv_actors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:paddingBottom="@dimen/activity_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_actors_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
