<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_expanded_image"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_padding"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_book_expanded_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_expanded_book"
            android:layout_width="150dp"
            android:layout_height="188dp"
            android:contentDescription="@string/book_content_description"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_padding"
            android:textSize="@dimen/text_size_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_expanded_book" />

        <TextView
            android:id="@+id/tv_book_page_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/pageCount"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_title" />

        <TextView
            android:id="@+id/tv_book_page_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_2"
            android:layout_marginTop="@dimen/activity_padding"
            app:layout_constraintStart_toEndOf="@id/tv_book_page_count_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_title" />

        <TextView
            android:id="@+id/tv_book_description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/description"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_page_count_title" />


        <TextView
            android:id="@+id/tv_book_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginEnd="@dimen/home_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_description_title" />

        <TextView
            android:id="@+id/tv_book_authors_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/authors"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_description" />

        <TextView
            android:id="@+id/tv_book_authors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:paddingBottom="@dimen/activity_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_book_authors_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
