<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_expanded_image"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/activity_padding"
    app:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_rick_morty_expanded_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_expanded_rick_morty"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/rick_morty_content_description" />

        <TextView
            android:id="@+id/tv_rick_morty_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/home_padding"
            android:textSize="@dimen/text_size_content"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_expanded_rick_morty" />

        <TextView
            android:id="@+id/tv_rick_morty_species_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/species"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rick_morty_name" />

        <TextView
            android:id="@+id/tv_rick_morty_species"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginStart="@dimen/padding_2"
            app:layout_constraintStart_toEndOf="@id/tv_rick_morty_species_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_rick_morty_name" />

        <TextView
            android:id="@+id/tv_rick_morty_gender_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/gender"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rick_morty_species_title" />


        <TextView
            android:id="@+id/tv_rick_morty_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginStart="@dimen/padding_2"
            app:layout_constraintStart_toEndOf="@id/tv_rick_morty_gender_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_rick_morty_species_title" />

        <TextView
            android:id="@+id/tv_rick_morty_origin_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/home_padding"
            android:layout_marginTop="@dimen/activity_padding"
            android:text="@string/origin"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rick_morty_gender_title" />

        <TextView
            android:id="@+id/tv_rick_morty_origin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_padding"
            android:layout_marginStart="@dimen/padding_2"
            android:paddingBottom="@dimen/activity_padding"
            app:layout_constraintStart_toEndOf="@id/tv_rick_morty_origin_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_rick_morty_gender_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
